[project]
name = "aravis-wa"
version = "1.2.0"
description = "aravis library, modified for Agritech"
requires-python = ">=3.12, <3.13"

dependencies = [
    "numpy>=2.3.3",
    "pygobject>=3.54.2"
]

[project.urls]
Homepage = "https://github.com/Warwick-Agritech/python-aravis"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["aravis"]

