[project]
name = "aress"
version = "1.1.0"
description = "aravis library, modified for Agritech"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy>=2.3.3",
    "pygobject>=3.54.2",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
aravis = { git = "https://github.com/Warwick-Agritech/python-aravis.git" , tag="v1.1.0" }

[tool.uv.extra-build-dependencies]
aravis = [
  "numpy>=2.3.3",
  "pygobject>=3.54.2",
  "setuptools>=80.9.0",
]

